refactoring: iteration - 1